--- a/build.gradle
+++ b/build.gradle
@@ -2,3 +2,9 @@ repositories {
     google()
     jcenter()
 }
+
+ext {
+    kotlin_coroutines_version = "1.3.2"
+    serialization_version = "0.13.0"
+    ktor_version = "1.2.5"
+}
