--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,8 +1,10 @@
 plugins {
     id 'org.jetbrains.kotlin.multiplatform' version '1.3.50'
     id("org.jetbrains.kotlin.native.cocoapods") version "1.3.50"
+    id('org.jetbrains.kotlin.plugin.serialization') version "1.3.50"
 }
 repositories {
+    jcenter()
     mavenCentral()
 }
 
@@ -18,6 +20,13 @@ kotlin {
         commonMain {
             dependencies {
                 implementation kotlin('stdlib-common')
+                implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:$kotlin_coroutines_version"
+
+                implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime-common:$serialization_version"
+
+                implementation("io.ktor:ktor-client-core:$ktor_version")
+                implementation "io.ktor:ktor-client-json:$ktor_version"
+                implementation "io.ktor:ktor-client-serialization:$ktor_version"
             }
         }
         commonTest {
@@ -29,6 +38,13 @@ kotlin {
         jvmMain {
             dependencies {
                 implementation kotlin('stdlib')
+
+                implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines_version"
+
+                implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
+
+                implementation("io.ktor:ktor-client-android:$ktor_version")
+                implementation "io.ktor:ktor-client-serialization-jvm:$ktor_version"
             }
         }
         jvmTest {
@@ -38,6 +54,12 @@ kotlin {
             }
         }
         iosMain {
+            dependencies {
+                implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime-native:$serialization_version"
+
+                implementation("io.ktor:ktor-client-ios:$ktor_version")
+                implementation "io.ktor:ktor-client-serialization-native:$ktor_version"
+            }
         }
         iosTest {
         }
