--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,6 +35,20 @@ android {
             versionNameSuffix ".debug"
         }
     }
+
+    packagingOptions {
+        pickFirst("META-INF/atomicfu.kotlin_module")
+        pickFirst("META-INF/kotlinx-coroutines-core.kotlin_module")
+        pickFirst("META-INF/kotlinx-coroutines-io.kotlin_module")
+        pickFirst("META-INF/kotlinx-serialization-runtime.kotlin_module")
+        pickFirst("META-INF/kotlinx-io.kotlin_module")
+        pickFirst("META-INF/ktor-http.kotlin_module")
+        pickFirst("META-INF/ktor-utils.kotlin_module")
+        pickFirst("META-INF/ktor-http-cio.kotlin_module")
+        pickFirst("META-INF/ktor-client-core.kotlin_module")
+        pickFirst("META-INF/ktor-client-json.kotlin_module")
+        pickFirst("META-INF/ktor-client-serialization.kotlin_module")
+    }
 }
 
 repositories {
@@ -49,4 +63,5 @@ dependencies {
 
     implementation "androidx.appcompat:appcompat:1.1.0"
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-alpha05"
 }
