--- a/build.gradle
+++ b/build.gradle
@@ -7,4 +7,5 @@ ext {
     kotlin_coroutines_version = "1.3.2"
     serialization_version = "0.13.0"
     ktor_version = "1.2.5"
+    klock_version = "1.7.3"
 }
