Moved api key and base url as parameters set by each app

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,6 +23,9 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0.0"
+
+        buildConfigField("String", "API_BASE_URL", "https://api.themoviedb.org/3")
+        buildConfigField("String", "API_KEY", "MY_API_KEY")
     }
 
     buildTypes {
